[gd_scene load_steps=5 format=3 uid="uid://ndqa5mfbb1to"]

[ext_resource type="Script" path="res://assets/3d_models/ship/hull_modules/internal_wall 3x3.gd" id="1_ayk6n"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3rtxh"]
transparency = 1
albedo_color = Color(0.956863, 0.443137, 0.913725, 0.501961)

[sub_resource type="BoxMesh" id="BoxMesh_n7dc8"]
material = SubResource("StandardMaterial3D_3rtxh")
size = Vector3(3, 0.1, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_aqt33"]
size = Vector3(0.05, 3, 3)

[node name="InternalWall3x3" type="Node3D"]
script = ExtResource("1_ayk6n")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 1.5, 0)
visible = false
mesh = SubResource("BoxMesh_n7dc8")

[node name="internal_wall" type="StaticBody3D" parent="." groups=["internal_wall"]]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="internal_wall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("BoxShape3D_aqt33")

[node name="wall_object" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 1.5, 0)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
